--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     testCompile 'junit:junit:4.12'
     compile project(':lib_zuowen')
 }
