--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.TabHomeAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.home.video.VideoDetailAct" />
+        <activity android:name=".ui.home.video.VideoListAct" />
+        <activity android:name=".ui.home.ArticleDetailAct" />
+        <activity android:name=".ui.login.BindPhoneAct" />
+        <activity android:name=".ui.login.LoginAct" />
+        <activity android:name=".ui.login.RegisterAct" />
+        <activity android:name=".ui.login.ResetPsdAct" />
     </application>
 
 </manifest>
