+好作文代码上传

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,14 @@
         </activity>
         <activity android:name=".ui.home.video.VideoDetailAct" />
         <activity android:name=".ui.home.video.VideoListAct" />
-        <activity android:name=".ui.home.ArticleDetailAct" />
+        <activity android:name=".ui.home.article.ArticleDetailAct" />
         <activity android:name=".ui.login.BindPhoneAct" />
         <activity android:name=".ui.login.LoginAct" />
         <activity android:name=".ui.login.RegisterAct" />
         <activity android:name=".ui.login.ResetPsdAct" />
+        <activity android:name=".ui.home.article.ArticleListAct" />
+        <activity android:name=".ui.home.week.WeekArticleAct" />
+        <activity android:name=".ui.mine.MineArticleAct" />
     </application>
 
 </manifest>
