+好作文代码上传

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ui.home.article.ArticleListAct" />
         <activity android:name=".ui.home.week.WeekArticleAct" />
         <activity android:name=".ui.mine.MineArticleAct" />
+        <activity android:name=".ui.home.article.ArticleSubjectAct" />
     </application>
 
 </manifest>
