--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ui.home.week.WeekArticleAct" />
         <activity android:name=".ui.mine.MineArticleAct" />
         <activity android:name=".ui.home.article.ArticleSubjectAct" />
+        <activity android:name=".ui.login.CompleteInfoAct" />
     </application>
 
 </manifest>
