--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".ui.home.article.ArticleSubjectAct" />
         <activity android:name=".ui.login.CompleteInfoAct" />
         <activity android:name=".ui.login.VerifyPhoneAct" />
+        <activity android:name=".ui.mine.UpdatePhoneAct" />
+        <activity android:name=".ui.mine.PayWayAct" />
     </application>
 
 </manifest>
