--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ui.login.VerifyPhoneAct" />
         <activity android:name=".ui.mine.UpdatePhoneAct" />
         <activity android:name=".ui.mine.PayWayAct" />
+        <activity android:name=".ui.mine.MineClassAct" />
     </application>
 
 </manifest>
