--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,6 @@
         <activity android:name=".ui.login.ResetPsdAct" />
         <activity android:name=".ui.home.article.ArticleListAct" />
         <activity android:name=".ui.home.week.WeekArticleAct" />
-        <activity android:name=".ui.mine.MineArticleAct" />
         <activity android:name=".ui.home.article.ArticleSubjectAct" />
         <activity android:name=".ui.login.CompleteInfoAct" />
         <activity android:name=".ui.login.VerifyPhoneAct" />
@@ -45,6 +44,8 @@
         <activity android:name=".ui.common.AgreementAct" />
         <activity android:name=".ui.home.article.ArticleUploadAct" />
         <activity android:name=".ui.home.vote.ArticleVoteAct" />
+        <activity android:name=".ui.home.vote.VoteDetailAct" />
+        <activity android:name=".ui.home.article.ArticleDetailMineAct" />
     </application>
 
 </manifest>
