--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,25 +10,28 @@
     <application
         android:name=".AppApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.TabHomeAct"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"></activity>
+        <activity
+            android:name=".ui.login.SplashAct"
+            android:theme="@style/AppSplash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".ui.home.video.VideoDetailAct" />
         <activity android:name=".ui.home.video.VideoListAct" />
         <activity android:name=".ui.home.article.ArticleDetailAct" />
         <activity android:name=".ui.login.BindPhoneAct" />
         <activity android:name=".ui.login.LoginAct">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.login.RegisterAct" />
         <activity android:name=".ui.login.ResetPsdAct" />
@@ -46,6 +49,9 @@
         <activity android:name=".ui.home.vote.ArticleVoteAct" />
         <activity android:name=".ui.home.vote.VoteDetailAct" />
         <activity android:name=".ui.home.article.ArticleDetailMineAct" />
+        <activity android:name=".ui.mine.UpdatePsdAct" />
+        <activity android:name=".ui.common.EditValueAct" />
+
     </application>
 
 </manifest>
