--- a/lib_zuowen/build.gradle
+++ b/lib_zuowen/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x'
     compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
     //-------------------图片处理---------------------
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
