--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,9 @@
         <activity android:name=".ui.home.video.VideoListAct" />
         <activity android:name=".ui.home.article.ArticleDetailAct" />
         <activity android:name=".ui.login.BindPhoneAct" />
-        <activity android:name=".ui.login.LoginAct">
-
-        </activity>
+        <activity
+            android:name=".ui.login.LoginAct"
+            android:launchMode="singleTask" />
         <activity android:name=".ui.login.RegisterAct" />
         <activity android:name=".ui.login.ResetPsdAct" />
         <activity android:name=".ui.home.article.ArticleListAct" />
