+好作文接口调用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".ui.home.article.ArticleDetailMineAct" />
         <activity android:name=".ui.mine.UpdatePsdAct" />
         <activity android:name=".ui.common.EditValueAct" />
+        <activity android:name=".ui.home.good.GoodListAct" />
 
     </application>
 
