--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,7 @@
         <activity
             android:name=".ui.login.ResetPsdOneAct"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.home.week.ArticleUploadAgainAct" />
 
     </application>
 
