--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.login.RegisterAct"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.login.ResetPsdAct"
             android:screenOrientation="portrait" />
@@ -106,8 +105,9 @@
         <activity
             android:name=".ui.login.ResetPsdOneAct"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.home.week.ArticleUploadAgainAct" />
-
+        <activity
+            android:name=".ui.home.week.ArticleUploadAgainAct"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".wxapi.WXPayEntryActivity"
