--- a/lib_zuowen/build.gradle
+++ b/lib_zuowen/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yalantis:ucrop:2.2.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
 
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.alibaba:fastjson:1.2.13'
