+好作文接口调用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,9 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".ui.mine.UpdatePhoneTwoAct"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
