+好作文接口调用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,7 @@
         <activity android:name=".ui.common.HelpAct" />
         <activity android:name=".ui.home.message.MessageListAct" />
         <activity android:name=".ui.home.message.MesageDetailAct" />
+        <activity android:name=".ui.home.vote.VoteStageAct" />
     </application>
 
 </manifest>
