--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,7 @@
         <activity android:name=".ui.common.HelpAct" />
         <activity android:name=".ui.home.message.MessageListAct" />
         <activity android:name=".ui.home.message.MesageDetailAct" />
-        <activity android:name=".ui.home.vote.VoteStageAct" />
+        <activity android:name=".ui.home.vote.VoteStageListAct" />
     </application>
 
 </manifest>
