+好作文接口调用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,7 @@
         <activity android:name=".ui.home.message.MessageListAct" />
         <activity android:name=".ui.home.message.MesageDetailAct" />
         <activity android:name=".ui.home.vote.VoteStageListAct" />
+        <activity android:name=".ui.home.week.FileListAct" />
     </application>
 
 </manifest>
